# Llm_Privacy_Project

./: .env  README.md  README.txt  pyproject.toml
agents/: local_llm_agent.py
analysis/: generate_dashboard.py  plot_individual_tests.py  plot_results.py  plot_risk_categories.py
chroma_store/: chroma.sqlite3
data/example_docs/: knowledge_snippets.txt
data/prompts/: adversarial.txt  normal.txt  sensitive.txt
models/: local_wrapper.py  openai_wrapper.py
retrievers/: chroma_manager.py
tests/: privacy_test_runner.py
tools/: toolkit.py
